[gd_scene load_steps=7 format=2]

[ext_resource path="res://tools/class_editor/game_resources/game_resources.tscn" type="PackedScene" id=1]
[ext_resource path="res://tools/class_editor/class_editor.gd" type="Script" id=2]
[ext_resource path="res://tools/class_editor/editor_theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/fonts/ui_title_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://tools/class_editor/components/editor/classes_tab_container.gd" type="Script" id=5]
[ext_resource path="res://tools/class_editor/structures/structures.tscn" type="PackedScene" id=6]

[node name="ClassEditor" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0

[node name="TopDivider" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1906.0
margin_bottom = 1066.0

[node name="TitleDivider" type="HBoxContainer" parent="MarginContainer/TopDivider"]
margin_right = 1906.0
margin_bottom = 32.0
custom_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/TopDivider/TitleDivider"]
margin_right = 1762.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "GameClass Editor"

[node name="SaveButton" type="Button" parent="MarginContainer/TopDivider/TitleDivider"]
margin_left = 1782.0
margin_right = 1834.0
margin_bottom = 32.0
text = "Save"

[node name="QuitButton" type="Button" parent="MarginContainer/TopDivider/TitleDivider"]
margin_left = 1854.0
margin_right = 1906.0
margin_bottom = 32.0
text = "Quit"

[node name="TitleSeparator" type="HSeparator" parent="MarginContainer/TopDivider"]
margin_top = 42.0
margin_right = 1906.0
margin_bottom = 46.0

[node name="EditorDivider" type="HSplitContainer" parent="MarginContainer/TopDivider"]
margin_top = 56.0
margin_right = 1906.0
margin_bottom = 1066.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SideBar" type="PanelContainer" parent="MarginContainer/TopDivider/EditorDivider"]
margin_right = 300.0
margin_bottom = 1010.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TopDivider/EditorDivider/SideBar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 1003.0

[node name="Info" type="RichTextLabel" parent="MarginContainer/TopDivider/EditorDivider/SideBar/MarginContainer"]
margin_right = 286.0
margin_bottom = 996.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
text = "Description about what this is.

And how to use it."

[node name="Classes" type="TabContainer" parent="MarginContainer/TopDivider/EditorDivider"]
margin_left = 312.0
margin_right = 1906.0
margin_bottom = 1010.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameResources" parent="MarginContainer/TopDivider/EditorDivider/Classes" instance=ExtResource( 1 )]
margin_left = 4.0
margin_top = 41.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Structures" parent="MarginContainer/TopDivider/EditorDivider/Classes" instance=ExtResource( 6 )]
visible = false
margin_left = 4.0
margin_top = 41.0
margin_right = -4.0
margin_bottom = -4.0
[connection signal="pressed" from="MarginContainer/TopDivider/TitleDivider/SaveButton" to="." method="_save"]
[connection signal="pressed" from="MarginContainer/TopDivider/TitleDivider/QuitButton" to="." method="_quit"]
[connection signal="data_saved" from="MarginContainer/TopDivider/EditorDivider/Classes" to="." method="_save"]
[connection signal="tab_changed" from="MarginContainer/TopDivider/EditorDivider/Classes" to="MarginContainer/TopDivider/EditorDivider/Classes" method="save_data"]
